1/19/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

1/14/2006 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

09/30/2005 Bob Rossi <bob@brasko.net>

	* kui.c (kui_findkey): Init the_map_found local variable.

09/30/2005 Bob Rossi <bob@brasko.net>

	* kui_term.c (kui_term_print_cgdb_key_array): Fixed code typo.

version 0.5.3 (08/08/2005):

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

08/02/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

07/13/2005 Bob Rossi <bob@brasko.net>

	* Makefile.in: Autogenerated.
	* src/Makefile.in: Ditto.

06/30/2005 Bob Rossi <bob@brasko.net>

   * inc/kui.h (kui_getkey_callback): Added parameter. Change return semantics.
   (kui_manager_get_raw_data): Add NOTE in comment.
   * src/kui.c (kui_findchar): Added parameter. Change return semantics.
   (kui_findkey): Add local.
   (char_callback): Add parameter, use it in call to function in body.
   (kui_callback): Add parameter.
   * src/kui_driver.c (main_loop): Check for null to prevent crash.

version 0.5.2 (05/21/2005):

05/21/2005 Bob Rossi <bob@brasko.net>

	* src/Makefile.am (AM_CFLAGS): Changed relative paths to use $top_srcdir.
	(libkui_a_DEPENDENCIES): Ditto.
	(noinst_bin_PROGRAMS): Removed kui_driver.
	(noinst_bindir): Removed.
	(noinst_PROGRAMS): Added kui_driver.
	(kui_driver_LDFLAGS): Changed relative paths to use $top_srcdir.
	* src/Makefile.in: Autogenerated.

05/19/2005 Bob Rossi <bob@brasko.net>

	* src/kui.c (kui_callback): Check new return val of io_data_ready.

version 0.5.1 (04/02/2005):
version 0.5.0 (07/14/2004):

07/14/2004 Bob Rossi <bob@brasko.net>

    * src/Makefile.am (noinst_bindir): changed top_srcdir to top_builddir

06/29/2004 Bob Rossi <bob@brasko.net>

	* inc/kui.h (kui_get_raw_data): add new function
	(kui_set_blocking_ms): Ditto
	(kui_manager_get_raw_data): Ditto