@@ -1,3 +1,8 @@
+1/20/2006 Bob Rossi <bob@brasko.net>
+
+   * src/kui_term.c (stdio): Add include.
+   (tigetstr): Add prototype.
+
 1/19/2006 Bob Rossi <bob@brasko.net>
 
 	* Makefile.in: Autogenerated.
